<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">COMO V3.0 </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo">imgVLogo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_section1"></string>
    <string name="title_section2">Listado Cobros del día</string>
    <string name="title_section3">Detalle Cobro (demo)</string>
    <string name="title_section4">Cobros realizados</string>
    <string name="title_section5">Salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example"></string>
    <string name="action_settings">Salir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="strLogin">Ingresar</string>
    <string name="invalid_user">Éste usuario es inválido</string>
    <string name="invalid_password">La contraseña es demasiado corta</string>
    <string name="incorrect_password">La contraseña es incorrecta</string>
    <string name="field_required">Éste campo es requerido</string>
    <string name="title_activity_auth">Ingreso de usuarios</string>
    <string name="strSalir">Salir</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="demo_content">Contenido demo Aqui va el detalle del cobro</string>
    <string name="strDetalleTitle">Detalle Cobro</string>
    <string name="strImgMap">Mapa Icono</string>
    <string name="strInfoImg">Logo</string>
    <string name="title_activity_mostrar_mapa">Ultima Ubicacion del cliente</string>
    <string name="lblAccion">Cobro Móvil</string>
    <string name="lblSeguroExit">Recuerde esta aplicación trabaja con acceso a internet, en estos momentos no cuenta con ninguna conexión, la aplicación se cerrará</string>
    <string name="lblSi">Aceptar</string>
    <string name="lblNo">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mnMapa">Regresar Detalle</string>

</resources>
